--- a/src/index.html
+++ b/src/index.html
@@ -1,335 +1,278 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-	<title>WebGL Gaussian Splat Viewer</title>
-	<meta charset="utf-8" />
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-	<style>
-		body {
-			overflow: hidden;
-			margin: 0;
-			height: 100vh;
-			width: 100vw;
-			font-family: sans-serif;
-			background: black;
-			text-shadow: 0 0 3px black;
-		}
-
-		a,
-		body {
-			color: white;
-		}
-
-		#info {
-			z-index: 100;
-			position: absolute;
-			top: 10px;
-			left: 15px;
-		}
-
-		h3 {
-			margin: 5px 0;
-		}
-
-		p {
-			margin: 5px 0;
-			font-size: small;
-		}
-
-		.cube-wrapper {
-			transform-style: preserve-3d;
-		}
-
-		.cube {
-			transform-style: preserve-3d;
-			transform: rotateX(45deg) rotateZ(45deg);
-			animation: rotation 2s infinite;
-		}
-
-		.cube-faces {
-			transform-style: preserve-3d;
-			height: 80px;
-			width: 80px;
-			position: relative;
-			transform-origin: 0 0;
-			transform: translateX(0) translateY(0) translateZ(-40px);
-		}
-
-		.cube-face {
-			position: absolute;
-			inset: 0;
-			background: #0017ff;
-			border: solid 1px #ffffff;
-		}
-
-		.cube-face.top {
-			transform: translateZ(80px);
-		}
-
-		.cube-face.front {
-			transform-origin: 0 50%;
-			transform: rotateY(-90deg);
-		}
-
-		.cube-face.back {
-			transform-origin: 0 50%;
-			transform: rotateY(-90deg) translateZ(-80px);
-		}
-
-		.cube-face.right {
-			transform-origin: 50% 0;
-			transform: rotateX(-90deg) translateY(-80px);
-		}
-
-		.cube-face.left {
-			transform-origin: 50% 0;
-			transform: rotateX(-90deg) translateY(-80px) translateZ(80px);
-		}
-
-		@keyframes rotation {
-			0% {
-				transform: rotateX(45deg) rotateY(0) rotateZ(45deg);
-				animation-timing-function: cubic-bezier(0.17,
-						0.84,
-						0.44,
-						1);
+	<head>
+		<title>WebGL Gaussian Splat Viewer</title>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no"
+		/>
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta
+			name="apple-mobile-web-app-status-bar-style"
+			content="black-translucent"
+		/>
+		<style>
+			body {
+				overflow: hidden;
+				margin: 0;
+				height: 100vh;
+				width: 100vw;
+				font-family: sans-serif;
+				background: black;
+    			text-shadow: 0 0 3px black;
+			}
+			a, body {
+				color: white;
+			}
+			#info {
+				z-index: 100;
+				position: absolute;
+				top: 10px;
+				left: 15px;
+			}
+			h3 {
+				margin: 5px 0;
+			}
+			p {
+				margin: 5px 0;
+				font-size: small;
 			}
 
-			50% {
-				transform: rotateX(45deg) rotateY(0) rotateZ(225deg);
-				animation-timing-function: cubic-bezier(0.76,
+			.cube-wrapper {
+				transform-style: preserve-3d;
+			}
+
+			.cube {
+				transform-style: preserve-3d;
+				transform: rotateX(45deg) rotateZ(45deg);
+				animation: rotation 2s infinite;
+			}
+
+			.cube-faces {
+				transform-style: preserve-3d;
+				height: 80px;
+				width: 80px;
+				position: relative;
+				transform-origin: 0 0;
+				transform: translateX(0) translateY(0) translateZ(-40px);
+			}
+
+			.cube-face {
+				position: absolute;
+				inset: 0;
+				background: #0017ff;
+				border: solid 1px #ffffff;
+			}
+			.cube-face.top {
+				transform: translateZ(80px);
+			}
+			.cube-face.front {
+				transform-origin: 0 50%;
+				transform: rotateY(-90deg);
+			}
+			.cube-face.back {
+				transform-origin: 0 50%;
+				transform: rotateY(-90deg) translateZ(-80px);
+			}
+			.cube-face.right {
+				transform-origin: 50% 0;
+				transform: rotateX(-90deg) translateY(-80px);
+			}
+			.cube-face.left {
+				transform-origin: 50% 0;
+				transform: rotateX(-90deg) translateY(-80px) translateZ(80px);
+			}
+
+			@keyframes rotation {
+				0% {
+					transform: rotateX(45deg) rotateY(0) rotateZ(45deg);
+					animation-timing-function: cubic-bezier(
+						0.17,
+						0.84,
+						0.44,
+						1
+					);
+				}
+				50% {
+					transform: rotateX(45deg) rotateY(0) rotateZ(225deg);
+					animation-timing-function: cubic-bezier(
+						0.76,
 						0.05,
 						0.86,
-						0.06);
-			}
-
-			100% {
-				transform: rotateX(45deg) rotateY(0) rotateZ(405deg);
-				animation-timing-function: cubic-bezier(0.17,
+						0.06
+					);
+				}
+				100% {
+					transform: rotateX(45deg) rotateY(0) rotateZ(405deg);
+					animation-timing-function: cubic-bezier(
+						0.17,
 						0.84,
 						0.44,
-						1);
+						1
+					);
+				}
 			}
-		}
 
-		.scene,
-		#message {
-			position: absolute;
-			display: flex;
-			top: 0;
-			right: 0;
-			left: 0;
-			bottom: 0;
-			z-index: 2;
-			height: 100%;
-			width: 100%;
-			align-items: center;
-			justify-content: center;
-		}
+			.scene,
+			#message {
+				position: absolute;
+				display: flex;
+				top: 0;
+				right: 0;
+				left: 0;
+				bottom: 0;
+				z-index: 2;
+				height: 100%;
+				width: 100%;
+				align-items: center;
+				justify-content: center;
+			}
+			#message {
+				font-weight: bold;
+				font-size: large;
+				color: red;
+				pointer-events: none;
+			}
 
-		#message {
-			font-weight: bold;
-			font-size: large;
-			color: red;
-			pointer-events: none;
-		}
+			details {
+				font-size: small;
 
-		details {
-			font-size: small;
+			}
 
-		}
+			#progress {
+				position: absolute;
+				top: 0;
+				height: 5px;
+				background: blue;
+				z-index: 99;
+				transition: width 0.1s ease-in-out;
+			}
 
-		#progress {
-			position: absolute;
-			top: 0;
-			height: 5px;
-			background: blue;
-			z-index: 99;
-			transition: width 0.1s ease-in-out;
-		}
+			#quality {
+				position: absolute;
+				bottom: 10px;
+				z-index: 999;
+				right: 10px;
+			}
 
-		#quality {
-			position: absolute;
-			bottom: 10px;
-			z-index: 999;
-			right: 10px;
-		}
+			#caminfo {
+				position: absolute;
+				top: 10px;
+				z-index: 999;
+				right: 10px;
+			}
+			#canvas {
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				touch-action: none;
+			}
 
-		#caminfo {
-			position: absolute;
-			top: 10px;
-			z-index: 999;
-			right: 10px;
-		}
-
-		#canvas {
-			display: block;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			touch-action: none;
-		}
-
-		#instructions {
-			background: rgba(0, 0, 0, 0.6);
-			white-space: pre-wrap;
-			padding: 10px;
-			border-radius: 10px;
-			font-size: x-small;
-		}
-
-		body.nohf .nohf {
-			display: none;
-		}
-
-		body.nohf #progress,
-		body.nohf .cube-face {
-			background: #ff9d0d;
-		}
-
-		.videoView,
-		.detectOnClick,
-		.blend-shapes {
-			position: relative;
-			float: left;
-			width: 48%;
-			margin: 2% 1%;
-			cursor: pointer;
-		}
-
-		.videoView p,
-		.detectOnClick p {
-			position: absolute;
-			padding: 5px;
-			background-color: #007f8b;
-			color: #fff;
-			border: 1px dashed rgba(255, 255, 255, 0.7);
-			z-index: 2;
-			font-size: 12px;
-			margin: 0;
-		}
-	</style>
-</head>
-
-<body>
-	<script>
-		if (location.host.includes('hf.space')) document.body.classList.add('nohf');
-	</script>
-	<div id="info">
-		<h3 class="nohf">WebGL Animated 3D Gaussian Splat Avatar Viewer</h3>
-		<p>
+			#instructions {
+				background: rgba(0,0,0,0.6);
+				white-space: pre-wrap;
+				padding: 10px;
+				border-radius: 10px;
+				font-size: x-small;
+			}
+			body.nohf .nohf {
+				display: none;
+			}
+			body.nohf #progress, body.nohf .cube-face {
+				background: #ff9d0d;
+			}
+		</style>
+	</head>
+	<body>
+		<script>
+			if(location.host.includes('hf.space')) document.body.classList.add('nohf');
+		</script>
+		<div id="info">
+			<h3 class="nohf">WebGL Animated 3D Gaussian Splat Avatar Viewer</h3>
+			<p>
 			<small class="nohf">
-				By <a href="">Yan Yuanjie</a>. Code on <a href="https://github.com/Dizzy-cell/splat-av">Github</a>.
-				Example <a href="https://dizzy.us.kg/">web</a>.
+				By <a href="">Yan Yuanjie</a>. Code on <a href="https://github.com/antimatter15/splat">Github</a>. Example <a href="https://dizzy.us.kg/">web</a>.
 				Inspired By <a href="https://twitter.com/antimatter15">Kevin Kwok</a>.
 				Code on
-				<a href="https://github.com/antimatter15/splat">Github</a>.
+				<a href="https://github.com/antimatter15/splat">Github</a
+				>.
 			</small>
 		</p>
 
-		<details>
+			<details>
 			<summary>Use mouse or arrow keys to navigate.</summary>
 
-			<div id="instructions">movement (arrow keys)
-				- left/right arrow keys to strafe side to side
-				- up/down arrow keys to move forward/back
-				- space to jump
+<div id="instructions">movement (arrow keys)
+- left/right arrow keys to strafe side to side
+- up/down arrow keys to move forward/back
+- space to jump
 
-				camera angle (wasd)
-				- a/d to turn camera left/right
-				- w/s to tilt camera up/down
-				- q/e to roll camera counterclockwise/clockwise
-				- i/k and j/l to orbit
+camera angle (wasd)
+- a/d to turn camera left/right
+- w/s to tilt camera up/down
+- q/e to roll camera counterclockwise/clockwise
+- i/k and j/l to orbit
 
-				trackpad
-				- scroll up/down/left/right to orbit
-				- pinch to move forward/back
-				- ctrl key + scroll to move forward/back
-				- shift + scroll to move up/down or strafe
+trackpad
+- scroll up/down/left/right to orbit
+- pinch to move forward/back
+- ctrl key + scroll to move forward/back
+- shift + scroll to move up/down or strafe
 
-				mouse
-				- click and drag to orbit
-				- right click (or ctrl/cmd key) and drag up/down to move
+mouse
+- click and drag to orbit
+- right click (or ctrl/cmd key) and drag up/down to move
 
-				touch (mobile)
-				- one finger to orbit
-				- two finger pinch to move forward/back
-				- two finger rotate to rotate camera clockwise/counterclockwise
-				- two finger pan to move side-to-side and up-down
+touch (mobile)
+- one finger to orbit
+- two finger pinch to move forward/back
+- two finger rotate to rotate camera clockwise/counterclockwise
+- two finger pan to move side-to-side and up-down
 
-				gamepad
-				- if you have a game controller connected it should work
+gamepad
+- if you have a game controller connected it should work
 
-				other
-				- press 0-9 to switch to one of the pre-loaded camera views
-				- press '-' or '+'key to cycle loaded cameras
-				- press p to resume default animation
-				- drag and drop .ply file to convert to .splat
-				- drag and drop cameras.json to load cameras
-			</div>
+other
+- press 0-9 to switch to one of the pre-loaded camera views
+- press '-' or '+'key to cycle loaded cameras
+- press p to resume default animation
+- drag and drop .ply file to convert to .splat
+- drag and drop cameras.json to load cameras
+</div>
 
 		</details>
+			
+		</div>
 
-	</div>
+		<div id="progress"></div>
 
-	<div id="progress"></div>
-
-	<div id="message"></div>
-	<div class="scene" id="spinner">
-		<div class="cube-wrapper">
-			<div class="cube">
-				<div class="cube-faces">
-					<div class="cube-face bottom"></div>
-					<div class="cube-face top"></div>
-					<div class="cube-face left"></div>
-					<div class="cube-face right"></div>
-					<div class="cube-face back"></div>
-					<div class="cube-face front"></div>
+		<div id="message"></div>
+		<div class="scene" id="spinner">
+			<div class="cube-wrapper">
+				<div class="cube">
+					<div class="cube-faces">
+						<div class="cube-face bottom"></div>
+						<div class="cube-face top"></div>
+						<div class="cube-face left"></div>
+						<div class="cube-face right"></div>
+						<div class="cube-face back"></div>
+						<div class="cube-face front"></div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<canvas id="canvas"></canvas>
+		<canvas id="canvas"></canvas>
 
-	<div id="quality">
-		<span id="fps"></span>
-	</div>
-	<div id="caminfo">
-		<span id="camid"></span>
-	</div>
-
-	<script src="main.js"></script>
-
-	<section id="demos" class="invisible">
-		
-		<h2>Demo: Webcam continuous face landmarks detection</h2>
-		<p>Hold your face in front of your webcam to get real-time face landmarker detection.</br>Click <b>enable
-				webcam</b> below and grant access to the webcam if prompted.</p>
-
-		<div id="liveView" class="videoView">
-			<button id="webcamButton" class="mdc-button mdc-button--raised">
-				<span class="mdc-button__ripple"></span>
-				<span class="mdc-button__label">ENABLE WEBCAM</span>
-			</button>
-			<div style="position: relative;">
-				<video id="webcam" style="position: abso" autoplay playsinline></video>
-				<canvas class="output_canvas" id="output_canvas"
-					style="position: absolute; left:0px; top: 0px;"></canvas>
-			</div>
+		<div id="quality">
+			<span id="fps"></span>
 		</div>
-		<div class="blend-shapes">
-			<ul class="blend-shapes-list" id="video-blend-shapes"></ul>
+		<div id="caminfo">
+			<span id="camid"></span>
 		</div>
-	</section>
-
-	<script type="module" src="./script.js"></script>
-
-</body>
-
+		<script src="main.js"></script>
+	</body>
 </html>
